Bug 1278108 - Implement <input type="range"> on gtk 3.20. r=karlt